fix gap

--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ ul,ol {
     grid-template-columns: 1fr 3fr 2fr;
     align-items: start;
     grid-template-rows: auto;
-    grid-gap: 18px;
+    grid-gap: 2rem;
     max-width: 100%;
     width: 1280px;
     margin: 0 auto;
